app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diplom-nginx
  namespace: diplom-app
  labels:
    app: diplom-nginx
spec:
  type: ClusterIP
  selector:
    app: diplom-nginx
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
